src/styles/panel.scss
.panel-wrapper {
  position: fixed;
  top: 350px;
  left: 30px;
  z-index: 15;
  opacity: 0;
  pointer-events: none;
}

.panel-wrapper.is-recording {
  opacity: 0.7;
  transition: opacity 0.15s;
  pointer-events: auto;
  &:hover {
    opacity: 1;
  }
}

.panel-drag-handler {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 0;
}
.panel-drag-icon {
  text-align: center;
  height: 40px;
  line-height: 40px;
  color: var(--gray-600);
}

.panel {
  background-color: var(--light);
  border: 1px solid var(--gray-600);
  border-radius: 1rem;
  padding: 10px;
}

.panel-btn {
  display: flex;
  align-items: center;
  justify-content: center;
  color: var(--gray-600);
  font-size: var(--font-xs);
  line-height: var(--leading-xs);
  border-radius: 0.5rem;
  padding: 0.25rem 1rem;
  transition:
    background-color 0.15s,
    color 0.15s;
  white-space: nowrap;
  font-weight: 500;
  position: relative;

  background-color: var(--gray-100);

  &:hover {
    background-color: var(--gray-300);
    color: var(--dark);
  }
  &.active {
    background-color: var(--gray-400);
  }

  &--stop {
    background-color: var(--error);
    border-color: var(--error);
    color: var(--dark);
  }

  &--stop:hover {
    background-color: #e00000;
    border-color: #e00000;
  }

  &--play {
    background-color: #4ea3f1;
    border-color: #4ea3f1;
    color: var(--dark);
  }

  &--play:hover {
    background-color: #0079e9;
    border-color: #0079e9;
  }
}

.panel-divider {
  background-color: var(--gray-400);
  width: 100%;
  height: 1px;
  margin: 0.5rem 0;
}

.panel-settings {
  position: absolute;
  left: calc(100% + 0.75rem);
  bottom: 0;
}

.panel-slider {
  writing-mode: vertical-lr;
  direction: rtl;
  appearance: none;
  background: transparent;
  width: 24px;

  &::-webkit-slider-thumb {
    appearance: none;
    width: 1.5rem;
    height: 1.5rem;
    border-radius: 50%;
    background: var(--gray-600);
    cursor: pointer;
    margin-left: -0.5rem;

    &:hover {
      transform: scale(1.25);
      transition: transform 0.15s;
    }
  }

  &::-webkit-slider-runnable-track {
    width: 0.5rem;
    background: var(--gray-300);
    border-radius: 1rem;
  }
}

